--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "redux-form": "7.4.2",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
-    "semantic-ui": "^2.3.3",
+    "semantic-ui-react": "^0.82.1",
     "sequelize": "^4.3.1",
     "socket.io": "^2.0.3"
   },
