--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "axios": "^0.15.3",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
-    "express": "^4.14.1",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
     "morgan": "^1.8.1",
@@ -71,6 +70,7 @@
     "axios-mock-adapter": "^1.9.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.2",
+    "body-parser": "^1.18.3",
     "chai": "^3.5.0",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
@@ -78,15 +78,18 @@
     "eslint-config-fullstack": "^5.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
+    "express": "^4.16.3",
     "husky": "^0.14.3",
     "lint-staged": "^7.1.3",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
     "npm-merge-driver": "^2.3.5",
     "prettier": "1.11.1",
+    "react-stripe-elements": "^2.0.1",
     "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.2.3",
+    "stripe": "^6.5.0",
     "supertest": "^3.0.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
