everything working except log out

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   "rules": {
     "semi": 0,
     "react/prefer-stateless-function": "false",
-    "complexity": "off"
+    "complexity": "off",
+    "no-case-declarations": "off"
   }
 }
