--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.82.1",
     "sequelize": "^4.3.1",
+    "sinon": "^6.1.4",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
@@ -83,6 +84,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.1.3",
     "mocha": "^5.2.0",
+    "nodemailer": "^4.6.7",
     "nodemon": "^1.17.5",
     "npm-merge-driver": "^2.3.5",
     "prettier": "1.11.1",
