--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graceshopper",
+  "name": "hollieatron-industries",
   "version": "1.0.0",
   "description": "The world's leading Robot Store for professional Robot technology",
   "engines": {
