--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^0.15.3",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
+    "express": "^4.14.1",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
     "morgan": "^1.8.1",
@@ -80,7 +81,7 @@
     "eslint-config-fullstack": "^5.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
-    "express": "^4.16.3",
+    "express": "4.16.3",
     "husky": "^0.14.3",
     "lint-staged": "^7.1.3",
     "mocha": "^5.2.0",
