--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-polyfill": "^6.26.0",
+    "body-parser": "1.18.3",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
     "morgan": "^1.8.1",
+    "nodemailer": "^4.6.7",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "pg": "^6.1.2",
@@ -53,6 +56,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
+    "react-stripe-elements": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "7.4.2",
     "redux-logger": "^2.8.1",
@@ -61,7 +65,8 @@
     "semantic-ui-react": "^0.82.1",
     "sequelize": "^4.3.1",
     "sinon": "^6.1.4",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "stripe": "^6.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
@@ -73,7 +78,6 @@
     "axios-mock-adapter": "^1.9.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.2",
-    "body-parser": "^1.18.3",
     "chai": "^3.5.0",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
@@ -85,15 +89,12 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.1.3",
     "mocha": "^5.2.0",
-    "nodemailer": "^4.6.7",
     "nodemon": "^1.17.5",
     "npm-merge-driver": "^2.3.5",
     "prettier": "1.11.1",
-    "react-stripe-elements": "^2.0.1",
     "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.2.3",
-    "stripe": "^6.5.0",
     "supertest": "^3.0.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
